--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                     <div class="popular-card popular-card--big">
                         <a class="popular__link" href="#">
                             <div class="popular__img skeleton">
-                                <img src="./img/grid/grid-1.png" alt="">
+                                <img src="./img/grid/grid-1.webp" alt="">
                             </div>
                             <div class="popular__text">
                                 <h3 class="popular-card__title skeleton">
@@ -717,7 +717,7 @@
                     <div class="popular-card popular-card--bottom">
                         <a class="popular__link" href="#">
                             <div class="popular__img skeleton">
-                                <img src="./img/grid/grid-2.png" alt="">
+                                <img src="./img/grid/grid-2.webp" alt="">
                             </div>
                             <div class="popular__text">
                                 <h3 class="popular-card__title skeleton">
@@ -732,7 +732,7 @@
                     <div class="popular-card popular-card--center">
                         <a class="popular__link" href="#">
                             <div class="popular__img skeleton">
-                                <img src="./img/grid/grid-3.png" alt="">
+                                <img src="./img/grid/grid-3.webp" alt="">
                             </div>
                             <div class="popular__text">
                                 <h3 class="popular-card__title skeleton">
@@ -747,7 +747,7 @@
                     <div class="popular-card popular-card--right">
                         <a class="popular__link" href="#">
                             <div class="popular__img skeleton">
-                                <img src="./img/grid/grid-4.png" alt="">
+                                <img src="./img/grid/grid-4.webp" alt="">
                             </div>
                             <div class="popular__text">
                                 <h3 class="popular-card__title skeleton">
