--- a/index.html
+++ b/index.html
@@ -2453,7 +2453,7 @@
                             </div>
                             <div class="product-box__brand">
                                 <a class="product-box__brand-link" href="">
-                                    <img class="lazyload" data-src="./img/brands/lex.png" alt="">
+                                    <img class="lazyload" data-src="./img/brands/lex.webp" alt="">
                                 </a>
                             </div>
                         </div>
