--- a/index.html
+++ b/index.html
@@ -628,9 +628,9 @@
     <main class="main">
         <section class="banner">
             <div class="container">
-                <div class="banner__inner">
-                    <div class="swiper banner-slider">
-                        <div class="swiper-wrapper banner-slider__wrapper skeleton">
+                <div class="banner__inner skeleton">
+                    <div class="swiper banner-slider ">
+                        <div class="swiper-wrapper banner-slider__wrapper ">
                             <div class="swiper-slide banner__slide ">
                                 <a class="banner__slide-link" href="#" aria-label="Перейти на страницу акции">
                                     <img src="./img/banner-slider/1.webp" alt="">
@@ -683,9 +683,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-button-next banner__button-next"></div>
-                    <div class="swiper-button-prev banner__button-prev"></div>
-                    <div class="swiper-pagination banner__pagination"></div>
+                    <div class="swiper-button-next banner__button-next "></div>
+                    <div class="swiper-button-prev banner__button-prev "></div>
+                    <div class="swiper-pagination banner__pagination skeleton"></div>
                 </div>
             </div>
         </section>
@@ -779,55 +779,55 @@
                 <div class="swiper categories-slider">
                     <div class="swiper-wrapper categories-wrapper">
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/1.webp" alt="">
                                 <span>Мойки</span>
                             </a>
                         </div>
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/2.webp" alt="">
                                 <span>Смесители</span>
                             </a>
                         </div>
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/3.webp" alt="">
                                 <span>Кухонные вытяжки</span>
                             </a>
                         </div>
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/4.webp" alt="">
                                 <span>Варочные панели</span>
                             </a>
                         </div>
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/5.webp" alt="">
                                 <span>Духовые шкафы</span>
                             </a>
                         </div>
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/6.webp" alt="">
                                 <span>Посудомоечные машины</span>
                             </a>
                         </div>
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/7.webp" alt="">
                                 <span>Микроволновые печи</span>
                             </a>
                         </div>
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/8.webp" alt="">
                                 <span>Холодильники</span>
                             </a>
                         </div>
                         <div class="swiper-slide categories-slide">
-                            <a class="categories-slide__link" href="#">
+                            <a class="categories-slide__link skeleton" href="#">
                                 <img class="lazyload" data-src="./img/categories/8.webp" alt="">
                                 <span>Холодильники</span>
                             </a>
@@ -845,7 +845,7 @@
 
         <section class="bestseller">
             <div class="container">
-                <div class="bestseller__title">
+                <div class="bestseller__title skeleton">
                     <h2 class="title title--center">
                         Выбор покупателей
                         <p>
@@ -1602,32 +1602,32 @@
                             <div class="swiper-slide showroom-slide">
                                 <div class="showroom-slide__inner">
                                     <div class="showroom-slide__info">
-                                        <h2 class="title title--showroom">
+                                        <h2 class="title title--showroom skeleton">
                                             Шоурумы
                                         </h2>
                                         <div class="showroom__address-inner">
-                                            <p class="showroom__question">
+                                            <p class="showroom__question skeleton">
                                                 Как добраться?
                                             </p>
-                                            <p class="showroom__address">
+                                            <p class="showroom__address skeleton">
                                                 г. Екатеринбург, ТЦ ASTROOM<br> ​ул. Цвиллинга, 1, корпус​ Б, 9 этаж
                                             </p>
                                         </div>
                                         <div class="showroom__hours">
-                                            <p class="showroom__question">
+                                            <p class="showroom__question skeleton">
                                                 Часы работы:
                                             </p>
-                                            <p class="showroom__address">
+                                            <p class="showroom__address skeleton">
                                                 Ежедневно с 10:00 до 20:00
                                             </p>
                                         </div>
-                                        <a class="rect-btn rect-btn--showroom" href="#">
+                                        <a class="rect-btn rect-btn--showroom skeleton" href="#">
                                             Проложить маршрут
                                         </a>
                                     </div>
 
-                                    <div class="swiper showroom-gallery-slider">
-                                        <div class="swiper-wrapper showroom-gallery-slider-wrapper">
+                                    <div class="swiper showroom-gallery-slider skeleton">
+                                        <div class="swiper-wrapper showroom-gallery-slider-wrapper ">
                                             <div class="swiper-slide showroom-gallery-slide">
                                                 <img class="lazyload" data-src="./img/showroom/1.webp" alt="">
                                             </div>
@@ -1678,7 +1678,7 @@
                                         </a>
                                     </div>
 
-                                    <div class="swiper showroom-gallery-slider">
+                                    <div class="swiper showroom-gallery-slider skeleton">
                                         <div class="swiper-wrapper showroom-gallery-slider-wrapper">
                                             <div class="swiper-slide showroom-gallery-slide">
                                                 <img class="lazyload" data-src="./img/showroom/1.webp" alt="">
@@ -1730,7 +1730,7 @@
                                         </a>
                                     </div>
 
-                                    <div class="swiper showroom-gallery-slider">
+                                    <div class="swiper showroom-gallery-slider skeleton">
                                         <div class="swiper-wrapper showroom-gallery-slider-wrapper">
                                             <div class="swiper-slide showroom-gallery-slide">
                                                 <img class="lazyload" data-src="./img/showroom/1.webp" alt="">
@@ -1769,7 +1769,7 @@
         <section class="brands">
             <div class="container">
                 <div class="brands__title">
-                    <h2 class="title title--center">
+                    <h2 class="title title--center skeleton">
                         Официальный дилер брендов
                         <p>
                             Список брендов, которые представлены на сайте
@@ -1777,7 +1777,7 @@
                     </h2>
                 </div>
 
-                <div class="splide brands__marquee" aria-label="brands__marquee">
+                <div class="splide brands__marquee skeleton" aria-label="brands__marquee">
                     <div class="splide__track brands__marquee-track">
                         <div class="splide__list brands__marquee-list">
                             <div class="splide__slide brands__marquee-card">
@@ -1950,7 +1950,7 @@
 
         <section class="videos">
             <div class="container">
-                <h2 class="title title--videos">
+                <h2 class="title title--videos skeleton">
                     Видеообзоры
                     <p>
                         Узнайте больше о товарах Екром и посмотрите сравнительные обзоры техники в наших соц-сетях.
@@ -1958,10 +1958,10 @@
                 </h2>
                 <div class="videos__inner">
                     <div class="videos__banner">
-                        <a class="videos__banner-cover" href="#">
+                        <a class="videos__banner-cover skeleton" href="#">
                             <img class="lazyload" data-src="./img/videos-img/cover.webp" alt="Баннер">
                         </a>
-                        <a class="videos__banner-link" href="#">
+                        <a class="videos__banner-link skeleton" href="#">
                             Смотреть все видеообзоры
                             <svg width="12" height="10" viewBox="0 0 12 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -1974,7 +1974,7 @@
                     </div>
                     <ul class="videos__list">
                         <li class="videos__item">
-                            <div class="videos__item-card">
+                            <div class="videos__item-card skeleton">
                                 <div class="videos__item-link">
                                     <video src="./videos/1.mp4" data-fancybox="video" loop
                                         poster="./img/videos-img/1.webp" data-width="540" data-height="0"></video>
@@ -1982,31 +1982,31 @@
                                     </button>
                                 </div>
                             </div>
-                            <p class="videos__item-name">
+                            <p class="videos__item-name skeleton">
                                 Зачем нужен винный шкаф
                             </p>
                         </li>
                         <li class="videos__item">
-                            <div class="videos__item-card">
+                            <div class="videos__item-card skeleton">
                                 <div class="videos__item-link">
                                     <video src="./videos/2.mp4" data-fancybox="video" loop
                                         poster="./img/videos-img/2.webp" data-width="540" data-height="0"></video>
                                     <button class="videos__item-button" aria-label="Воспроизвести видео"></button>
                                 </div>
                             </div>
-                            <p class="videos__item-name">
+                            <p class="videos__item-name skeleton">
                                 Как сэкономить при покупке техники
                             </p>
                         </li>
                         <li class="videos__item">
-                            <div class="videos__item-card">
+                            <div class="videos__item-card skeleton">
                                 <div class="videos__item-link">
                                     <video src="./videos/3.mp4" data-fancybox="video" loop
                                         poster="./img/videos-img/3.webp" data-width="540" data-height="0"></video>
                                     <button class="videos__item-button" aria-label="Воспроизвести видео"></button>
                                 </div>
                             </div>
-                            <p class="videos__item-name">
+                            <p class="videos__item-name skeleton">
                                 Ошибки при выборе стиральной машины
                             </p>
                         </li>
@@ -2018,12 +2018,12 @@
         <section class="faq">
             <div class="container">
                 <div class="faq__title">
-                    <h2 class="title title--center">
+                    <h2 class="title title--center skeleton">
                         Ответы и вопросы
                     </h2>
                 </div>
                 <div class="faq__inner">
-                    <div class="faq__item">
+                    <div class="faq__item skeleton">
                         <h5 class="faq__item-question">
                             Где купить?
                         </h5>
@@ -2033,7 +2033,7 @@
                             100%.
                         </p>
                     </div>
-                    <div class="faq__item">
+                    <div class="faq__item skeleton">
                         <h5 class="faq__item-question">
                             Сколько будет длиться диагностика?
                         </h5>
@@ -2043,7 +2043,7 @@
                             100%.
                         </p>
                     </div>
-                    <div class="faq__item">
+                    <div class="faq__item skeleton">
                         <h5 class="faq__item-question">
                             Даете ли вы гарантию на ремонт?
                         </h5>
@@ -2053,7 +2053,7 @@
                             100%.
                         </p>
                     </div>
-                    <div class="faq__item">
+                    <div class="faq__item skeleton">
                         <h5 class="faq__item-question">
                             Можно ли вызвать мастера на дом?
                         </h5>
@@ -2063,7 +2063,7 @@
                             100%.
                         </p>
                     </div>
-                    <div class="faq__item">
+                    <div class="faq__item skeleton">
                         <h5 class="faq__item-question">
                             Не появятся ли новые проблемы после ремонта?
                         </h5>
@@ -2073,7 +2073,7 @@
                             100%.
                         </p>
                     </div>
-                    <div class="faq__item">
+                    <div class="faq__item skeleton">
                         <h5 class="faq__item-question">
                             Где купить?
                         </h5>
@@ -2084,7 +2084,7 @@
                         </p>
                     </div>
                 </div>
-                <button class="rect-btn rect-btn--faq" id="rectBtnFaq">
+                <button class="rect-btn rect-btn--faq skeleton" id="rectBtnFaq">
                     Задать свой вопрос
                 </button>
             </div>
