скруглил границы у skeleton

--- a/index.html
+++ b/index.html
@@ -845,8 +845,8 @@
 
         <section class="bestseller">
             <div class="container">
-                <div class="bestseller__title skeleton">
-                    <h2 class="title title--center">
+                <div class="bestseller__title ">
+                    <h2 class="title title--center skeleton">
                         Выбор покупателей
                         <p>
                             То, что пользуется спросом прямо сейчас
