--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
                 <nav class="header__top-nav">
                     <ul class="header__top-list">
                         <li class="header__top-item">
-                            <a class="header__top-link" href="#">Акции</a>
+                            <a class="header__top-link actions" href="#">
+                                Акции
+                                <svg width="9" height="12" viewBox="0 0 9 12" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7 0L0 7H3L2 12L9 5H6L7 0Z" fill="white" />
+                                </svg>
+                            </a>
                         </li>
                         <li class="header__top-item">
                             <a class="header__top-link" href="#">Оплата</a>
@@ -1603,7 +1609,7 @@
                                 <div class="showroom-slide__inner">
                                     <div class="showroom-slide__info">
                                         <h2 class="title title--showroom skeleton">
-                                            Шоурумы
+                                            Шоурум
                                         </h2>
                                         <div class="showroom__address-inner">
                                             <p class="showroom__question skeleton">
@@ -1655,7 +1661,7 @@
                                 <div class="showroom-slide__inner">
                                     <div class="showroom-slide__info">
                                         <h2 class="title title--showroom">
-                                            Шоурумы
+                                            Шоурум
                                         </h2>
                                         <div class="showroom__address-inner">
                                             <p class="showroom__question">
@@ -1707,7 +1713,7 @@
                                 <div class="showroom-slide__inner">
                                     <div class="showroom-slide__info">
                                         <h2 class="title title--showroom">
-                                            Шоурумы
+                                            Шоурум
                                         </h2>
                                         <div class="showroom__address-inner">
                                             <p class="showroom__question">
@@ -2885,6 +2891,105 @@
 
                 </div>
             </form>
+        </div>
+    </div>
+
+    <div id="popupCompare">
+        <div class="popup">
+            <p class="popup-text">
+                Товар добавлен в список сравнения!
+            </p>
+            <a class="popup-link" href="#">
+                Перейти в сравнение
+                <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M11.4596 5.45962C11.7135 5.20578 11.7135 4.79422 11.4596 4.54038L7.32304 0.403806C7.0692 0.149965 6.65765 0.149965 6.40381 0.403806C6.14997 0.657647 6.14997 1.0692 6.40381 1.32304L10.0808 5L6.40381 8.67696C6.14997 8.9308 6.14997 9.34235 6.40381 9.59619C6.65765 9.85003 7.0692 9.85003 7.32304 9.59619L11.4596 5.45962ZM0 5.65H11V4.35H0V5.65Z"
+                        fill="#282739"></path>
+                </svg>
+            </a>
+            <button class="close-btn close-btn--popup">
+                <svg width="10" height="10" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
+                        fill="#537ce5" />
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <div id="popupFav">
+        <div class="popup">
+            <p class="popup-text">
+                Товар добавлен в список избранного!
+            </p>
+            <a class="popup-link" href="#">
+                Перейти в избранное
+                <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M11.4596 5.45962C11.7135 5.20578 11.7135 4.79422 11.4596 4.54038L7.32304 0.403806C7.0692 0.149965 6.65765 0.149965 6.40381 0.403806C6.14997 0.657647 6.14997 1.0692 6.40381 1.32304L10.0808 5L6.40381 8.67696C6.14997 8.9308 6.14997 9.34235 6.40381 9.59619C6.65765 9.85003 7.0692 9.85003 7.32304 9.59619L11.4596 5.45962ZM0 5.65H11V4.35H0V5.65Z"
+                        fill="#282739"></path>
+                </svg>
+            </a>
+            <button class="close-btn close-btn--popup">
+                <svg width="10" height="10" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
+                        fill="#537ce5" />
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <div id="citySelect" class="modal">
+        <div class="city-select">
+            <h4 class="city-select__title">
+                Выберите город доставки
+            </h4>
+            <form class="city-select__form" action="">
+                <input type="search" name="citySelectSearch" placeholder="Поиск">
+                <button>
+                    <img src="./img/icons/search-icon.svg" alt="">
+                </button>
+            </form>
+            <p class="city-select__popular">
+                Популярные города
+            </p>
+            <ul class="city-select__cities">
+                <li class="city-select__city">
+                    <span>Екатеринбург</span>
+                </li>
+                <li class="city-select__city">
+                    <span>Москва</span>
+                </li>
+                <li class="city-select__city">
+                    <span>Санкт-Петербург</span>
+                </li>
+                <li class="city-select__city">
+                    <span>Тюмень</span>
+                </li>
+                <li class="city-select__city">
+                    <span>Новосибирск</span>
+                </li>
+                <li class="city-select__city">
+                    <span>Казань</span>
+                </li>
+                <li class="city-select__city">
+                    <span>Нижний Новгород</span>
+                </li>
+                <li class="city-select__city">
+                    <span>Красноярск</span>
+                </li>
+                <li class="city-select__city">
+                    <span>Челябинск</span>
+                </li>
+            </ul>
+            <button class="close-btn close-btn--city-select">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
+                        fill="#282739" />
+                </svg>
+            </button>
         </div>
     </div>
 
