--- a/catalog.html
+++ b/catalog.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="image/x-icon" href="./img/favicon/favicon.ico" rel="shortcut icon">
-    <link type="image/x-icon" href="./img/favicon/favicon.ico" rel="icon">
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/catalog.css">
@@ -705,6 +703,72 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="catalog">
+            <div class="container">
+                <div class="catalog__inner">
+                    <aside class="filter">
+                        <h3 class="filter-title">
+                            Фильтр
+                        </h3>
+                        <div class="filter-items">
+                            <div class="filter-item filter-item--available">
+                                <ul class="filter-item__list">
+                                    <li class="filter-item__value">
+                                        <input type="checkbox" id="filter1">
+                                        <label for="filter1">
+                                            <span></span>
+                                            <span class="filter-count"></span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="filter-item filter-item">
+                                <button class="filter-item__header">
+                                    Тип монтажа
+                                </button>
+                                <ul class="filter-item__list">
+                                    <li class="filter-item__value">
+                                        <input type="checkbox" id="filter2">
+                                        <label for="filter2">
+                                            <span>Врезная</span>
+                                            <span class="filter-count">391</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter-item__value">
+                                        <input type="checkbox" id="filter3">
+                                        <label for="filter3">
+                                            <span>Под столешницу</span>
+                                            <span class="filter-count">187</span>
+                                        </label>
+                                    </li>
+                                    <li class="filter-item__value">
+                                        <input type="checkbox" id="filter3">
+                                        <label for="filter3">
+                                            <span>Накладная</span>
+                                            <span class="filter-count">101</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <p class="filter__items-show-filters">
+                            Показать все фильтры
+                        </p>
+                        <button class="oval-btn oval-btn--filter show">
+                            Показать
+                        </button>
+                        <button class="oval-btn oval-btn--filter reset">
+                            Сбросить
+                        </button>
+                    </aside>
+                </div>
+            </div>
+        </div>
+        </div>
+
+
         </div>
     </main>
 
