--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/font.css">
+    <link rel="stylesheet" href="./css/nouislider.min.css">
     <link rel="stylesheet" href="./css/catalog.css">
     <title>Каталог</title>
 </head>
@@ -712,50 +713,126 @@
                             Фильтр
                         </h3>
                         <div class="filter-items">
-                            <div class="filter-item filter-item--available">
-                                <ul class="filter-item__list">
-                                    <li class="filter-item__value">
-                                        <input type="checkbox" id="filter1">
-                                        <label for="filter1">
-                                            <span></span>
-                                            <span class="filter-count"></span>
-                                        </label>
-                                    </li>
-                                </ul>
+                            <div class="filter-item check">
+                                <div class="filter-item__props">
+                                    <ul class="filter-item__list">
+                                        <li class="filter-item__value">
+                                            <input type="checkbox" id="filter1">
+                                            <label class="filter-item__label" for="filter1">
+                                                <span>В наличии - доставим сегодня</span>
+                                                <span class="filter-count"></span>
+                                            </label>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                            <div class="filter-item range">
+                                <button class="filter-item__header">
+                                    Цена
+                                </button>
+                                <div class="filter-item__props">
+                                    <ul class="filter-item__list">
+                                        <li class="filter-item__value">
+                                            <div class="filter-item__slider"></div>
+                                            <div class="filter-item__inputs">
+                                                <input class="filter-item__input" type="number" min="0" max="99999999"
+                                                    placeholder="">
+                                                <div class="divider">—</div>
+                                                <input class="filter-item__input" type="number" min="0" max="99999999"
+                                                    placeholder="">
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="filter-item filter-item">
                                 <button class="filter-item__header">
                                     Тип монтажа
                                 </button>
-                                <ul class="filter-item__list">
-                                    <li class="filter-item__value">
-                                        <input type="checkbox" id="filter2">
-                                        <label for="filter2">
-                                            <span>Врезная</span>
-                                            <span class="filter-count">391</span>
-                                        </label>
-                                    </li>
-                                    <li class="filter-item__value">
-                                        <input type="checkbox" id="filter3">
-                                        <label for="filter3">
-                                            <span>Под столешницу</span>
-                                            <span class="filter-count">187</span>
-                                        </label>
-                                    </li>
-                                    <li class="filter-item__value">
-                                        <input type="checkbox" id="filter3">
-                                        <label for="filter3">
-                                            <span>Накладная</span>
-                                            <span class="filter-count">101</span>
-                                        </label>
-                                    </li>
-                                </ul>
+                                <div class="filter-item__props">
+                                    <ul class="filter-item__list">
+                                        <li class="filter-item__value">
+                                            <input type="checkbox" id="filter2">
+                                            <label class="filter-item__label" for="filter2">
+                                                <span>Врезная</span>
+                                                <span class="filter-count">391</span>
+                                            </label>
+                                        </li>
+                                        <li class="filter-item__value">
+                                            <input type="checkbox" id="filter3">
+                                            <label class="filter-item__label" for="filter3">
+                                                <span>Под столешницу</span>
+                                                <span class="filter-count">187</span>
+                                            </label>
+                                        </li>
+                                        <li class="filter-item__value">
+                                            <input type="checkbox" id="filter4">
+                                            <label class="filter-item__label" for="filter4">
+                                                <span>Накладная</span>
+                                                <span class="filter-count">101</span>
+                                            </label>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="filter-item filter-item">
+                                <button class="filter-item__header">
+                                    Цвет
+                                </button>
+                                <div class="filter-item__props">
+                                    <ul class="filter-item__list">
+                                        <li class="filter-item__value">
+                                            <input type="checkbox" id="filter5">
+                                            <label class="filter-item__label" for="filter5">
+                                                <span>Черный</span>
+                                                <span class="filter-count">391</span>
+                                            </label>
+                                        </li>
+                                        <li class="filter-item__value">
+                                            <input type="checkbox" id="filter6">
+                                            <label class="filter-item__label" for="filter6">
+                                                <span>Белый</span>
+                                                <span class="filter-count">187</span>
+                                            </label>
+                                        </li>
+                                        <li class="filter-item__value">
+                                            <input type="checkbox" id="filter7">
+                                            <label class="filter-item__label" for="filter7">
+                                                <span>Бежевый</span>
+                                                <span class="filter-count">101</span>
+                                            </label>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="filter-item range">
+                                <button class="filter-item__header">
+                                    Ширина встраивания
+                                </button>
+                                <div class="filter-item__props">
+                                    <ul class="filter-item__list">
+                                        <li class="filter-item__value">
+                                            <div class="filter-item__slider"></div>
+                                            <div class="filter-item__inputs">
+                                                <input class="filter-item__input" type="number" min="0" max="99999999"
+                                                    placeholder="">
+                                                <div class="divider">—</div>
+                                                <input class="filter-item__input" type="number" min="0" max="99999999"
+                                                    placeholder="">
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
-
-                        <p class="filter__items-show-filters">
-                            Показать все фильтры
-                        </p>
+                        
+                        <div class="filter__items-btn">
+                            <button class="filter__items-show-filters">
+                                Показать все фильтры
+                            </button>
+                        </div>
+                        
                         <button class="oval-btn oval-btn--filter show">
                             Показать
                         </button>
@@ -1762,6 +1839,9 @@
             });
         });
     </script>
+
+
+    <script src="./js/nouislider.min.js"></script>
     <script src="./js/catalog.js"></script>
 </body>
 
